2009-12-08  Gary Benson  <gbenson@redhat.com>

	* HACKING: Updated.

2009-12-08  Gary Benson  <gbenson@redhat.com>

	* patches/zero/6903453.patch: New file.
	* patches/icedtea-ia64-fdlibm.patch: Removed.
	* patches/icedtea-uname.patch: Fixed up.
	* Makefile.am (ICEDTEA_PATCHES): Updated.

2009-12-08  Gary Benson  <gbenson@redhat.com>

	* patches/zero/6896043.patch: New file.
	* patches/icedtea-cc-interp-backedge.patch: Removed.
	* patches/icedtea-cc-interp-jvmti.patch: Likewise.
	* patches/icedtea-ia64-bugfix.patch: Likewise.
	* patches/icedtea-s390-serialize.patch: Likewise.
	* patches/icedtea-test-atomic-operations.patch: Likewise.
	* Makefile.am (ICEDTEA_PATCHES): Updated.

2009-12-08  Gary Benson  <gbenson@redhat.com>

	* Makefile.am
	(ICEDTEA_CORE_BUILD): Removed.
	(ICEDTEA_ZERO_BUILD): Set to "yes" instead of "true".
	(ICEDTEA_ENV): Removed ICEDTEA_CORE_BUILD, replaced
	ICEDTEA_ZERO_BUILD with ZERO_BUILD, and replaced ZERO_BITSPERWORD
	with ARCH_DATA_MODEL.
	(ICEDTEA_ENV_ECJ): Likewise.
	(stamps/ports.stamp): Updated paths, and don't make jvm.cfg or
	ergo_$arch.c for Zero.
	(ICEDTEA_PATCHES): Added new patches and removed old ones.

	* acinclude.m4
	(ENABLE_ZERO_BUILD): Removed old CORE_BUILD stuff.
	(SET_CORE_OR_SHARK_BUILD): Replaced with...
	(SET_SHARK_BUILD): New macro.

	* configure.ac: Use SET_SHARK_BUILD before ENABLE_ZERO_BUILD in
	place of SET_CORE_OR_SHARK_BUILD after it.

	* patches/zero/6890308.patch: New file.
	* patches/zero/6891677.patch: Likewise.

	* patches/icedtea-core-build.patch: Removed.
	* patches/icedtea-core-build-hotspot.patch: Likewise.
	* patches/icedtea-linker-options.patch: Likewise.
	* patches/icedtea-signature-iterator.patch: Likewise.
	* patches/icedtea-static-libstdc++.patch: Likewise.
	* patches/icedtea-zero.patch: Likewise.
	* patches/icedtea-zero-build.patch: Likewise.
	* patches/icedtea-zero-build-hotspot.patch: Likewise.

	* patches/ecj/icedtea-hotspot.patch: Updated.
	* patches/icedtea-shark-build.patch: Likewise.