@@ -31,7 +31,6 @@ extra-source-files.txt
 rt-source-files.txt
 hotspot-tools-source-files.txt
 tools-source-files.txt
-platform_zero
 jvm.cfg
 ergo.c
 tapset/hotspot.stp
