@@ -1,5 +1,10 @@
 2009-12-08  Gary Benson  <gbenson@redhat.com>
 
+	* ports/hotspot/make/linux/platform_zero.in: New file.
+	* .hgignore: Updated.
+
+2009-12-08  Gary Benson  <gbenson@redhat.com>
+
 	* HACKING: Updated.
 
 2009-12-08  Gary Benson  <gbenson@redhat.com>
